# progbootcamp2021

./: .db.env  Dockerfile.app  docker-compose.yml  requirements.txt
.devcontainer/: devcontainer.json
db/: employees.sql
restclient/: main.py  pyproject.toml  requirements.txt
restclient/restclient/: __init__.py
restclient/tests/: test_restclient.py
